# agent-task

./: .agent-task.json  AGENTS.md  Cargo.toml  README.md
docs/adr/: 001-language-detection-library.md
src/: init.rs  lang.rs  main.rs  project.rs  store.rs
tests/: cli.rs
