[package]
name = "agent-task"
version = "0.2.0"
edition = "2024"
description = "Lightweight task management CLI for coding agents and humans to collaborate asynchronously"
license = "MIT"
repository = "https://github.com/nyosegawa/agent-task"
homepage = "https://github.com/nyosegawa/agent-task"
readme = "README.md"
keywords = ["cli", "task", "agent", "coding-agent", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whatlang = "0.16"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
